--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rand = "0.8"
+nalgebra = "0.29"
+nalgebra-glm = "0.19"
+minifb = "0.27.0"
+rusttype = "0.9.3"
+image = "0.25.2"
+time = "0.3.36"
+once_cell = "1.19.0"
+gilrs = "0.10.9"
+rodio = "0.19.0"
